--- a/catalog.html
+++ b/catalog.html
@@ -34,6 +34,7 @@
                   </svg>
                   Коля Петухов
                  </a>
+                 <a class="navigation-item-logout">Выйти</a>
                </li>
                <li class="user-navigation-item-compare">
                 <a class="user-navigation-link" href="#">
