--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
            </a>
          </li>
          <li class="categories-item">
-           <a class="categories-link" href="catalog.html/categories/monopods">
+           <a class="categories-link" href="catalog.html">
             <div class="image-container selfie">
              <img class="categories-images" src="images/categories/monopods.svg" alt="Изображение для категории Моноподы для селфи" width="86" height="117">
             </div>
@@ -389,7 +389,7 @@
             <li class="footer-social-item">
              <a class="footer-social-button" href="https://instagram.com/htmlacademy">
               <svg class="footer-social-image" aria-hidden="true" focusable="false" width="16" height="16" fill="#444444" xmlns="http://www.w3.org/2000/svg">
-                <path d="M8 10a2 2 0 1 0 0-4 2 2 0 0 0 0 4Z" />
+                <path d="M8 10a2 2 0 1 0 0-4 2 2 0 0 0 0 4Z"/>
                 <path d="M14.7 1.3c-.9-.9-2-1.3-3.4-1.3H4.7C1.9 0 0 1.9 0 4.7v6.6c0 1.4.4 2.6 1.4 3.4.9.9 2 1.3 3.3 1.3h6.6c1.4 0 2.6-.4 3.4-1.3.8-.9 1.3-2 1.3-3.4V4.7c0-1.4-.4-2.6-1.3-3.4ZM8 12.1c-2.2 0-4.1-1.8-4.1-4.1S5.8 3.9 8 3.9c2.2 0 4.1 1.8 4.1 4.1s-1.9 4.1-4.1 4.1Zm4.6-7.4c-.7 0-1.3-.5-1.3-1.3s.5-1.3 1.3-1.3c.7 0 1.3.6 1.3 1.3 0 .7-.6 1.3-1.3 1.3Z"/>
               </svg>
                <span class="visually-hidden">Инстаграм</span>
