--- a/catalog.html
+++ b/catalog.html
@@ -53,23 +53,37 @@
               </ul>
 
               <ul class="navigation-list">
-               <li class="navigation-item-catalog">
-                 <a class="navigation-catalog-link navigation-link" href="catalog.html">Каталог Товаров</a>
-               </li>
-               <li class="navigation-item-delivery">
-                 <a class="navigation-link" href="delivery.html">Доставка</a>
-               </li>
-               <li class="navigation-item-garanty">
-                 <a class="navigation-link" href="garanty.html">Гарантия</a>
-               </li>
-               <li class="navigation-item-contacts">
-                 <a class="navigation-link contacts-link" href="contacts.html">Контакты</a>
-               </li>
-              </ul>
-           </nav>
-         </div>
-       </div>
-   </header>
+                <li class="navigation-item-catalog">
+                  <a class="navigation-catalog-link navigation-link" href="#">Каталог Товаров</a>
+                  <ul class="navigation-submenu-list">
+                    <li class="navigation-submenu-item">
+                      <a class="navigation-submenu-link" href="#">Виртуальная реальность</a>
+                      <a class="navigation-submenu-link" href="catalog.html">Моноподы для селфи</a>
+                      <a class="navigation-submenu-link" href="#">Экшн-камеры</a>
+                    </li>
+                    <li class="navigation-submenu-item">
+                      <a class="navigation-submenu-link" href="#">Фитнес-браслеты</a>
+                      <a class="navigation-submenu-link" href="#">Умные часы</a>
+                    </li>
+                    <li class="navigation-submenu-item">
+                      <a class="navigation-submenu-link" href="#">Квадрокоптеры</a>
+                    </li>
+                  </ul>
+                </li>
+                <li class="navigation-item-delivery">
+                  <a class="navigation-link" href="delivery.html">Доставка</a>
+                </li>
+                <li class="navigation-item-garanty">
+                  <a class="navigation-link" href="garanty.html">Гарантия</a>
+                </li>
+                <li class="navigation-item-contacts">
+                  <a class="navigation-link contacts-link" href="contacts.html">Контакты</a>
+                </li>
+               </ul>
+            </nav>
+          </div>
+        </div>
+    </header>
 
    <main class="main-inner">
       <section class="inner-header">
@@ -155,35 +169,55 @@
                  <li class="catalog-filter-item">
                   <label class="control">
                     <input class="visually-hidden control-input" type="checkbox" name="black" checked>
-                    <span class="control-mark"></span>
+                    <span class="control-mark">
+                      <svg class="control-input-image" aria-hidden="true" focusable="false" width="10" height="10" fill="#000" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M10 0 3.1 6.6 0 3.6v3.3L3.2 10 10 3.3V0Z"/>
+                      </svg>
+                    </span>
                     <span class="control-label">Черный</span>
                   </label> 
                  </li>
                  <li class="catalog-filter-item"> 
                   <label class="control">
                     <input class="visually-hidden control-input" type="checkbox" name="white" checked>
-                    <span class="control-mark"></span>
+                    <span class="control-mark">
+                      <svg class="control-input-image" aria-hidden="true" focusable="false" width="10" height="10" fill="#000" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M10 0 3.1 6.6 0 3.6v3.3L3.2 10 10 3.3V0Z"/>
+                      </svg>
+                    </span>
                     <span class="control-label">Белый</span>
                   </label>
                  </li>
                  <li class="catalog-filter-item">
                   <label class="control">
                     <input class="visually-hidden control-input" type="checkbox" name="blue">
-                    <span class="control-mark"></span>
+                    <span class="control-mark">
+                      <svg class="control-input-image" aria-hidden="true" focusable="false" width="10" height="10" fill="#000" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M10 0 3.1 6.6 0 3.6v3.3L3.2 10 10 3.3V0Z"/>
+                      </svg>
+                    </span>
                     <span class="control-label">Синий</span>
                   </label>
                  </li>
                  <li class="catalog-filter-item">
                   <label class="control">
                     <input class="visually-hidden control-input" type="checkbox" name="red">
-                    <span class="control-mark"></span>
+                    <span class="control-mark">
+                      <svg class="control-input-image" aria-hidden="true" focusable="false" width="10" height="10" fill="#000" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M10 0 3.1 6.6 0 3.6v3.3L3.2 10 10 3.3V0Z"/>
+                      </svg>
+                    </span>
                     <span class="control-label">Красный</span>
                   </label>
                  </li>
                  <li class="catalog-filter-item">
                   <label class="control">
                     <input class="visually-hidden control-input" type="checkbox" name="pink">
-                    <span class="control-mark"></span>
+                    <span class="control-mark">
+                      <svg class="control-input-image" aria-hidden="true" focusable="false" width="10" height="10" fill="#000" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M10 0 3.1 6.6 0 3.6v3.3L3.2 10 10 3.3V0Z"/>
+                      </svg>
+                    </span>
                     <span class="control-label">Розовый</span>
                   </label>
                  </li>
@@ -218,39 +252,48 @@
 
             <ul class="product-list">
                 <li class="product-card">
-                 <a class="product-card-link" href="product.html">
+                 <a class="product-card-link" href="#">
                     <img class="product-card-image" src="images/catalog/product-1.jpg" alt="Любительская селфи палка" width="360" height="380">
-                   <div class="product-text-container">
-                    <h3 class="product-card-title">Любительская селфи-палка</h3>
-                    <p class="product-card-price">500 ₽</p>
-                   </div>
+                    <div class="product-text-container">
+                      <h3 class="product-card-title">Любительская селфи-палка</h3>
+                      <p class="product-card-price">500 ₽</p>
+                    </div>
+                    <a class="product-card-button" href="#">Подробнее</a>
                  </a>
                 </li>
                 <li class="product-card">
-                 <a class="product-card-link" href="product.html">
+                 <a class="product-card-link" href="#">
                     <img class="product-card-image" src="images/catalog/product-2.jpg" alt="Профессиональная селфи-палка" width="360" height="380">
-                  <div class="product-text-container">
-                    <h3 class="product-card-title">Профессиональная селфи-палка</h3>
-                     <p class="product-card-price">1500 ₽</p>
-                  </div>
+                    <div class="product-text-container">
+                      <h3 class="product-card-title">Профессиональная селфи-палка</h3>
+                      <p class="product-card-price">1500 ₽</p>
+                    </div>
+                    <a class="product-card-button" href="#">Подробнее</a>
                  </a>
                 </li>
                 <li class="product-card">
-                 <a class="product-card-link" href="product.html">
+                 <a class="product-card-link" href="#">
                     <img class="product-card-image" src="images/catalog/product-3.jpg" alt="Непотопляемая селфи-палка" width="360" height="380">
-                   <div class="product-text-container">  
-                    <h3 class="product-card-title">Непотопляемая селфи-палка</h3>
-                    <p class="product-card-price">2500 ₽</p>
-                  </div>
+                    <div class="product-text-container">  
+                      <h3 class="product-card-title">Непотопляемая селфи-палка</h3>
+                      <p class="product-card-price">2500 ₽</p>
+                    </div>
+                    <a class="product-card-button" href="#">Подробнее</a>
                  </a>
                 </li>
                 <li class="product-card">
-                 <a class="product-card-link" href="product.html">
+                 <a class="product-card-link" href="#">
                     <img class="product-card-image" src="images/catalog/product-4.jpg" alt="Селфи-палка Следуй за мной" width="360" height="380">
-                  <div class="product-text-container">
-                    <h3 class="product-card-title">Селфи-палка «Следуй за мной»</h3>
-                    <p class="product-card-price">4900 ₽</p>
-                  </div>
+                    <div class="product-text-container">
+                      <h3 class="product-card-title">Селфи-палка «Следуй за мной»</h3>
+                      <p class="product-card-price">4900 ₽</p>
+                    </div>
+                    <span class="new-mark">
+                      <svg aria-hidden="true" focusable="false" width="60" height="60" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <circle cx="30" cy="30" r="29" stroke="#000" stroke-opacity=".6" stroke-width="2"/><path d="M13.56 29.32V35h-2.3v-9.94h1.83l4.6 5.85v-5.85H20V35H18.1l-4.55-5.68Zm18.12 3.66V35h-6.99v-9.94h6.86v2.02h-4.56V29h3.92v1.86h-3.92v2.11h4.69Zm7.47-7.9h2.11l1.04 3.17 1.03-3.18h2.13l-1.7 4.62 1.02 2.65 2.49-7.28h2.5L45.9 35h-2l-1.6-3.9-1.6 3.9h-2l-3.86-9.94h2.49l2.5 7.28.98-2.65-1.66-4.62Z" fill="#000" fill-opacity=".6"/>
+                      </svg>
+                    </span>
+                    <a class="product-card-button" href="#">Подробнее</a>
                   </a>
                 </li>
             </ul>
