--- a/index.html
+++ b/index.html
@@ -54,7 +54,21 @@
 
                <ul class="navigation-list">
                 <li class="navigation-item-catalog">
-                  <a class="navigation-catalog-link navigation-link" href="catalog.html">Каталог Товаров</a>
+                  <a class="navigation-catalog-link navigation-link" href="#">Каталог Товаров</a>
+                  <ul class="navigation-submenu-list">
+                    <li class="navigation-submenu-item">
+                      <a class="navigation-submenu-link" href="#">Виртуальная реальность</a>
+                      <a class="navigation-submenu-link" href="catalog.html">Моноподы для селфи</a>
+                      <a class="navigation-submenu-link" href="#">Экшн-камеры</a>
+                    </li>
+                    <li class="navigation-submenu-item">
+                      <a class="navigation-submenu-link" href="#">Фитнес-браслеты</a>
+                      <a class="navigation-submenu-link" href="#">Умные часы</a>
+                    </li>
+                    <li class="navigation-submenu-item">
+                      <a class="navigation-submenu-link" href="#">Квадрокоптеры</a>
+                    </li>
+                  </ul>
                 </li>
                 <li class="navigation-item-delivery">
                   <a class="navigation-link" href="delivery.html">Доставка</a>
