--- a/catalog.html
+++ b/catalog.html
@@ -34,7 +34,7 @@
                   </svg>
                   Коля Петухов
                  </a>
-                 <a class="user-navigation-link-logout">Выйти</a>
+                 <a class="user-navigation-link-logout href="#">Выйти</a>
                </li>
                <li class="user-navigation-item-compare">
                 <a class="user-navigation-link compare-link" href="#">
@@ -58,7 +58,7 @@
                   <ul class="navigation-submenu-list">
                     <li class="navigation-submenu-item">
                       <a class="navigation-submenu-link" href="#">Виртуальная реальность</a>
-                      <a class="navigation-submenu-link" href="catalog.html">Моноподы для селфи</a>
+                      <a class="navigation-submenu-link">Моноподы для селфи</a>
                       <a class="navigation-submenu-link" href="#">Экшн-камеры</a>
                     </li>
                     <li class="navigation-submenu-item">
@@ -97,7 +97,7 @@
                   <a class="breadcrumbs-link" href="catalog.html">Каталог товаров</a>
               </li>
               <li class="breadcrumbs-item">
-                <a class="breadcrumbs-link" href="catalog.html">Моноподы для селфи</a>
+                <a class="breadcrumbs-link">Моноподы для селфи</a>
               </li>
           </ul>
         </div>
@@ -258,8 +258,8 @@
                       <h3 class="product-card-title">Любительская селфи-палка</h3>
                       <p class="product-card-price">500 ₽</p>
                     </div>
-                    <a class="product-card-button" href="#">Подробнее</a>
                  </a>
+                 <a class="product-card-button" href="#">Подробнее</a>
                 </li>
                 <li class="product-card">
                  <a class="product-card-link" href="#">
@@ -268,8 +268,8 @@
                       <h3 class="product-card-title">Профессиональная селфи-палка</h3>
                       <p class="product-card-price">1500 ₽</p>
                     </div>
-                    <a class="product-card-button" href="#">Подробнее</a>
                  </a>
+                 <a class="product-card-button" href="#">Подробнее</a>
                 </li>
                 <li class="product-card">
                  <a class="product-card-link" href="#">
@@ -278,8 +278,8 @@
                       <h3 class="product-card-title">Непотопляемая селфи-палка</h3>
                       <p class="product-card-price">2500 ₽</p>
                     </div>
-                    <a class="product-card-button" href="#">Подробнее</a>
                  </a>
+                 <a class="product-card-button" href="#">Подробнее</a>
                 </li>
                 <li class="product-card">
                  <a class="product-card-link" href="#">
@@ -293,8 +293,8 @@
                         <circle cx="30" cy="30" r="29" stroke="#000" stroke-opacity=".6" stroke-width="2"/><path d="M13.56 29.32V35h-2.3v-9.94h1.83l4.6 5.85v-5.85H20V35H18.1l-4.55-5.68Zm18.12 3.66V35h-6.99v-9.94h6.86v2.02h-4.56V29h3.92v1.86h-3.92v2.11h4.69Zm7.47-7.9h2.11l1.04 3.17 1.03-3.18h2.13l-1.7 4.62 1.02 2.65 2.49-7.28h2.5L45.9 35h-2l-1.6-3.9-1.6 3.9h-2l-3.86-9.94h2.49l2.5 7.28.98-2.65-1.66-4.62Z" fill="#000" fill-opacity=".6"/>
                       </svg>
                     </span>
-                    <a class="product-card-button" href="#">Подробнее</a>
-                  </a>
+                 </a>
+                 <a class="product-card-button" href="#">Подробнее</a>
                 </li>
             </ul>
             <button class="product-button" type="button">Загрузить еще</button>
@@ -338,7 +338,7 @@
      <div class="container">
       <div class="footer-container">
        <h2 class="visually-hidden">Контакты</h2>
-         <a class="footer-logo" href="index.html">
+         <a class="footer-logo">
           <img class="footer-contacts-logo" src="images/logo-footer.svg" alt="Логотип сайта" width="145" height="36">
          </a>
 
