--- a/index.html
+++ b/index.html
@@ -44,11 +44,39 @@
                 </li>
                 <li class="user-navigation-item-basket">
                   <a class="user-navigation-link basket-link" href="#">
-                  <span class="number-basket-item">2</span>
                   <svg class="navigation-image basket-image" aria-hidden="true" focusable="false" width="16" height="14" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path d="m15.3 5-3.5.2L8.6.3C8.5.1 8.2 0 8 0c-.2 0-.5.1-.6.3L4.2 5.2H.7c-.4 0-.7.3-.7.7v.2l1.9 6.8c.2.7.7 1.1 1.4 1.1h9.4c.7 0 1.2-.4 1.4-1.1L16 6v-.2c0-.4-.3-.8-.7-.8ZM8 1.9l2.2 3.2H5.9L8 1.9Z" fill="#000"/>
                   </svg>
                   Корзина</a>
+                  <!-- <div class="popover popover-cart">
+                    <button class="popover-close-button">
+                      2
+                      <span class="visually-hidden">Закрыть</span>
+                    </button>
+                    <div class="popover-content">
+                       <h2 class="popover-title visually-hidden">Корзина</h2>
+                       <ul class="product-list">
+                        <li class="product-card">
+                         <a class="product-card-link" href="#">
+                            <img class="product-card-image" src="images/catalog/product-1.jpg" alt="Любительская селфи палка" width="360" height="380">
+                            <div class="product-text-container">
+                              <h3 class="product-card-title">Любительская селфи-палка</h3>
+                              <p class="product-card-price">500 ₽</p>
+                            </div>
+                         </a>
+                        </li>
+                        <li class="product-card">
+                         <a class="product-card-link" href="#">
+                            <img class="product-card-image" src="images/catalog/product-2.jpg" alt="Профессиональная селфи-палка" width="360" height="380">
+                            <div class="product-text-container">
+                              <h3 class="product-card-title">Профессиональная селфи-палка</h3>
+                              <p class="product-card-price">1500 ₽</p>
+                            </div>
+                         </a>
+                        </li>
+                       </ul>
+                    </div>
+                  </div> -->
                 </li>
                </ul>
 
@@ -366,7 +394,7 @@
       <div class="container">
        <div class="footer-container">
         <h2 class="visually-hidden">Контакты</h2>
-          <a class="footer-logo" href="index.html">
+          <a class="footer-logo">
            <img class="footer-contacts-logo" src="images/logo-footer.svg" alt="Логотип сайта" width="145" height="36">
           </a>
 
